# MVN-OpenVR-Driver

./: .gitmodules  CMakeLists.txt
cmake/: FindNeuronDataReader.cmake  FindNeuronMocapAPI.cmake  Findxstypes.cmake
driver_files/driver/MVN/: driver.vrdrivermanifest
driver_files/driver/MVN/resources/rendermodels/XSens/LeftFoot/: LeftFoot.mtl
driver_files/driver/MVN/resources/rendermodels/XSens/RightFoot/: RightFoot.mtl
driver_files/driver/MVN/resources/settings/: default.vrsettings
driver_files/src/: CMakeLists.txt
driver_files/src/Driver/: ControllerDevice.cpp  ControllerDevice.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp
driver_files/src/Driver/MVN/: quaterniondatagram.cpp  quaterniondatagram.h  segments.h  udpserver.cpp  udpserver.h
driver_files/src/Native/: DriverFactory.cpp  DriverFactory.hpp
resources/: driver.vrdrivermanifest
resources/resources/rendermodels/XSens/: CreateModelFolders.py
resources/resources/settings/: default.vrsettings
resources/resources/skeletons/: axisneuron_hierarchy.bvh
src/: CMakeLists.txt
src/Common/: IMocapStreamSource.hpp  IVRDevice.hpp  IVRDriver.hpp  PoseMath.hpp
src/Driver/: CMakeLists.txt  ControllerDevice.cpp  ControllerDevice.hpp  DriverFactory.cpp  DriverFactory.hpp  HMDDevice.cpp  HMDDevice.hpp  TrackerDevice.cpp  TrackerDevice.hpp  TrackingReferenceDevice.cpp  TrackingReferenceDevice.hpp  VRDriver.cpp  VRDriver.hpp
src/MocapSources/MVNAnimate/: CMakeLists.txt  MVNStreamSource.cpp  MVNStreamSource.h  linearsegmentkinematicsdatagram.cpp  linearsegmentkinematicsdatagram.h  parsermanager.cpp  parsermanager.h  quaterniondatagram.cpp  quaterniondatagram.h  segments.h
src/MocapSources/PerceptionNeuron/: BVH.cpp  BVH.h  CMakeLists.txt  NeuronSegments.h  NeuronStreamSource.cpp  NeuronStreamSource.h  bvh_header_template.bvh  bvh_header_template.h  bvh_header_template2.bvh
